# google-analytics

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  idea.md  requirements.txt
backend/: .code-quality-ignore  .dockerignore  .env.example  .env.template  CONSOLIDATION_SUMMARY.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  TENANT_CONFIGURATION_GUIDE.md  docker-compose.yml  docker-entrypoint.sh  env.example  pyproject.toml  run_all_services.py  setup.sh  test_connection.py  test_email_endpoints.py
backend/common/: __init__.py  exceptions.py  job_monitor.py  logging.py  scheduler_client.py
backend/common/config/: __init__.py  settings.py
backend/common/database/: __init__.py  base.py  session.py  tenant_config.py  tenant_provisioning.py  tenant_session.py
backend/common/fastapi/: __init__.py  app_factory.py
backend/common/models/: __init__.py  analytics.py  control.py  data_ingestion.py  dimensions.py  events.py  job_status.py  locations.py  tasks.py  tenants.py  users.py
backend/common/security/: __init__.py  auth.py
backend/config/: bigquery.json.example
backend/database/functions/: get_cart_abandonment_tasks.sql  get_chart_data.sql  get_complete_dashboard_data.sql  get_dashboard_overview_stats.sql  get_data_availability_combined.sql  get_email_jobs_paginated.sql  get_email_send_history_paginated.sql  get_location_stats_bulk.sql  get_locations.sql  get_locations_with_activity_table.sql  get_performance_tasks.sql  get_purchase_tasks.sql  get_repeat_visit_tasks.sql  get_search_analysis_tasks.sql  get_session_history.sql  get_tenant_jobs_paginated.sql  get_user_history.sql
backend/database/tables/: add_to_cart.sql  branch_email_mappings.sql  email_send_history.sql  email_sending_jobs.sql  locations.sql  no_search_results.sql  page_view.sql  processing_jobs.sql  purchase.sql  task_tracking.sql  tenant_config.sql  tenants.sql  users.sql  view_item.sql  view_search_results.sql
backend/docs/: API.md  ARCHITECTURE.md  Azure_Functions_Deployment.md  DATABASE.md  DEVELOPMENT.md  README.md  RUNBOOK.md
backend/docs/adr/: 001-microservices-architecture.md  002-postgresql-functions.md  003-async-first-design.md  004-multi-tenant-isolation.md  005-fastapi-factory-pattern.md  006-bigquery-parallel-extraction.md  README.md
backend/scripts/: cancel_running_jobs.py  check_tenant_schema.py  clear_db.py  init_db.py  optimize_jobs_performance.py
backend/services/analytics_service/: .env.example  README.md  __init__.py  env.example  main.py  pyproject.toml  run_windows.py  utils.py
backend/services/analytics_service/api/: dependencies.py
backend/services/analytics_service/api/v1/: api.py
backend/services/analytics_service/app/: main.py
backend/services/analytics_service/app/core/: config.py
backend/services/analytics_service/config/: postgres.json.example
backend/services/analytics_service/database/: __init__.py  base.py  create_indices.sql  dependencies.py  history_repository.py  locations_repository.py  postgres_client.py  postgres_session.py  stats_repository.py  tasks_repository.py
backend/services/analytics_service/services/: __init__.py  email_service.py  report_service.py  template_service.py
backend/services/analytics_service/templates/: branch_report.html  combined_report.html
backend/services/auth_service/: README.md  __init__.py  main.py
backend/services/auth_service/api/: __init__.py  dependencies.py
backend/services/auth_service/app/: main.py
backend/services/auth_service/core/: config.py
backend/services/auth_service/services/: __init__.py  auth_service.py
backend/services/data_service/: .env.example  COMPREHENSIVE_SETUP.md  README.md  SETUP_GUIDE.md  __init__.py  env.example  main.py  pyproject.toml  run_windows.py  test_ingestion.py
backend/services/data_service/api/: __init__.py  dependencies.py
backend/services/data_service/app/: main.py
backend/services/data_service/clients/: __init__.py  azure_sftp_client.py  bigquery_client.py  enhanced_bigquery_client.py  sftp_client.py  tenant_client_factory.py
backend/services/data_service/config/: postgres.json.example  sftp.json.example  supabase.json.example
backend/services/data_service/core/: config.py
backend/services/data_service/database/: __init__.py  base.py  email_repository.py  ingestion_repository.py  init_database.py  sqlalchemy_repository.py  sqlalchemy_session.py
backend/services/data_service/services/: __init__.py  ingestion_service.py
backend/services/data_service_functions/: .funcignore  ALIGNMENT_CHANGES.md  DEPLOYMENT.md  EMAIL_SERVICE_IMPLEMENTATION.md  README.md  TESTING.md  check_azure_logs.ps1  check_azure_logs.sh  function_app.py  host.json  local.settings.json  pytest.ini  requirements.txt  test_email_sending.py  test_email_sending.sh  test_example.json  test_ingestion.py  test_ingestion.sh
backend/services/data_service_functions/activities/: __init__.py  job_management.py  process_events.py  process_locations.py  process_users.py
backend/services/data_service_functions/clients/: __init__.py  bigquery_client.py  sftp_client.py  tenant_client_factory.py
backend/services/data_service_functions/orchestrators/: __init__.py  ingestion_orchestrator.py
backend/services/data_service_functions/services/: __init__.py  email_service.py  ingestion_service.py  report_service.py  template_service.py
backend/services/data_service_functions/shared/: __init__.py  database.py  models.py
backend/services/data_service_functions/tests/: __init__.py  conftest.py  test_activities.py  test_email_sending.py  test_http_triggers.py  test_ingestion.py
backend/services/functions/: DEPLOYMENT.md  README.md  function_app.py  requirements.txt
backend/services/functions/clients/: __init__.py  bigquery_client.py  sftp_client.py  tenant_client_factory.py
backend/services/functions/services/: email_service.py  ingestion_service.py  report_service.py  template_service.py
backend/services/functions/shared/: __init__.py  database.py  models.py  tasks_repository.py
backend/services/functions/tests/: __init__.py  test_email_sending.py  test_ingestion.py
(+175 files in other folders)
