[tool.poetry]
name = "data-ingestion-service"
version = "0.1.0"
description = "Data ingestion service for Google Analytics intelligence system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
supabase = "^1.0.3"
pandas = "^2.1.3"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
tqdm = "^4.66.1"
google-cloud-storage = "^2.14.0"
google-auth = "^2.23.4"
pydantic = {extras = ["email"], version = "^2.11.7"}
google-cloud-bigquery = "^3.12.0"
db-dtypes = "^1.1.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.24.0"
aiofiles = "^23.2.0"
loguru = "^0.7.2"
tenacity = "^8.2.3"
paramiko = "^3.4.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
